--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
+
+    #   TEAM
+#spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
+
+    # Minh
+spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
