--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,16 @@
 #spring.jpa.hibernate.ddl-auto=create
 
     # Minh
-spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vythanhlam100@gmail.com
+spring.mail.password=vdbtpxsjiibqddcv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
