--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -19,4 +19,8 @@ spring.mail.username=vythanhlam100@gmail.com
 spring.mail.password=vdbtpxsjiibqddcv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.security.oauth2.client.registration.github.clientId=d484ea833ca9a654725b
+spring.security.oauth2.client.registration.github.clientSecret=21eb974f8b53ddab7813b33854783e51c0ee34af
+spring.security.oauth2.client.registration.github.scope: read:user, user:email
 
