--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
-<<<<<<< HEAD
-=======
+
     #   TEAM
 #spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
 #spring.datasource.username=root
@@ -9,15 +8,13 @@
 #spring.jpa.hibernate.ddl-auto=create
 
     # Minh
->>>>>>> 53508aaae065b12b148fc1b6a7cd23d605c1c8a3
+
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-spring.jpa.hibernate.ddl-auto=update
-=======
-#spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -25,5 +22,5 @@ spring.mail.username=vythanhlam100@gmail.com
 spring.mail.password=vdbtpxsjiibqddcv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
->>>>>>> 53508aaae065b12b148fc1b6a7cd23d605c1c8a3
+
 
