optimize click Count

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,10 @@
 
-<<<<<<< HEAD
-=======
-    #   TEAM
-#spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
 
-    # Minh
->>>>>>> 53508aaae065b12b148fc1b6a7cd23d605c1c8a3
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-spring.jpa.hibernate.ddl-auto=create
-=======
-<<<<<<< HEAD
-spring.jpa.hibernate.ddl-auto=update
-=======
-#spring.jpa.hibernate.ddl-auto=create
->>>>>>> lamvt17
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -29,7 +12,7 @@ spring.mail.username=vythanhlam100@gmail.com
 spring.mail.password=vdbtpxsjiibqddcv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
->>>>>>> 53508aaae065b12b148fc1b6a7cd23d605c1c8a3
+
 
 spring.security.oauth2.client.registration.github.clientId=d484ea833ca9a654725b
 spring.security.oauth2.client.registration.github.clientSecret=21eb974f8b53ddab7813b33854783e51c0ee34af
