--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,12 @@
 
 
 
-    #   TEAM
-#spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
-
-    # Minh
-
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=anhtcogn
-spring.datasource.password=153015
+spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
