--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,21 @@
 
 
     #   TEAM
-#spring.datasource.url=jdbc:mysql://localhost:3306/Test_bio
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
+spring.datasource.username=lamvt17
+spring.datasource.password=!Tg27jn0c&Jn930O
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
     # Minh
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=anhtcogn
-spring.datasource.password=153015
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -28,4 +28,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
