--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
@@ -18,4 +18,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
