--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/profile_link
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
+spring.datasource.username=lamvt17
+spring.datasource.password=!Tg27jn0c&Jn930O
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -18,4 +15,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
