update api design

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
 #db local
-spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
-spring.datasource.username=lamvt17
-spring.datasource.password=!Tg27jn0c&Jn930O
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-
-#db test
-#spring.datasource.url=jdbc:mysql://localhost:3306/demo
-#spring.datasource.username=anhtcogn
-#spring.datasource.password=153015
+#spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
+#spring.datasource.username=lamvt17
+#spring.datasource.password=!Tg27jn0c&Jn930O
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
+
+#db test
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.username=anhtcogn
+spring.datasource.password=153015
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.gmail.com
