--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 #db local
-spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
-spring.datasource.username=lamvt17
-spring.datasource.password=!Tg27jn0c&Jn930O
+#spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
+spring.datasource.url=jdbc:mysql://172.16.99.146:3306/database_test_bio
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #db test
 
