Khanh update code get image user rate 05/08/2022

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.username=lamvt17
 spring.datasource.password=!Tg27jn0c&Jn930O
 
 
-#spring.datasource.url=jdbc:mysql://172.16.99.146:3306/database_test_bio
+
+#cái này là ?? ? nhà ngh?ch
 #spring.datasource.url=jdbc:mysql://localhost:3306/database_test_bio
 #spring.datasource.username=root
 #spring.datasource.password=root
