--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 
 #db local
-#spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
-#spring.datasource.username=lamvt17
-#spring.datasource.password=!Tg27jn0c&Jn930O
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
+spring.datasource.username=lamvt17
+spring.datasource.password=!Tg27jn0c&Jn930O
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 #db test
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
 
 
 spring.mail.host=smtp.gmail.com
@@ -36,9 +36,7 @@ spring.cloud.azure.storage.blob.endpoint= https://anhtcogn.blob.core.windows.net
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-spring.security.oauth2.client.registration.google.clientId=YOUR_GOOGLE_APP_CLIENT_ID
-spring.security.oauth2.client.registration.google.clientSecret=YOUR_GOOGLE_APP_SECRET_KEY
-spring.security.oauth2.client.registration.google.scope=email, profile
+
 spring.security.oauth2.client.registration.facebook.clientId=1201359430694150
 spring.security.oauth2.client.registration.facebook.clientSecret=60f5a495a7200e6d69d4464060d1755c
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
