--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-#db local
+db local
 spring.datasource.url=jdbc:mysql://172.16.99.146:3306/team_2
 spring.datasource.username=lamvt17
 spring.datasource.password=!Tg27jn0c&Jn930O
